deploy: fb847622ff509def26807e02f26923e8927cf81a

--- a/integration_fleets_tutorial.html
+++ b/integration_fleets_tutorial.html
@@ -138,7 +138,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="fleet-adapter-tutorialpython"><a class="header" href="#fleet-adapter-tutorialpython">Fleet Adapter Tutorial(Python)</a></h1>
+                        <h1 id="fleet-adapter-tutorial-python"><a class="header" href="#fleet-adapter-tutorial-python">Fleet Adapter Tutorial (Python)</a></h1>
 <p><code>fleet_adapter</code> acts as a bridge between the robots and the core RMF system.</p>
 <p>Its responsibilities include but are not limited to:</p>
 <ul>
@@ -290,7 +290,7 @@ reference_coordinates:
 <p><code>robots</code> information about individual fleet robots</p>
 </li>
 <li>
-<p><code>tinyRobot1,tinyRobot2</code> name of the robot.</p>
+<p><code>tinyRobot1</code>, <code>tinyRobot2</code> name of the robot.</p>
 </li>
 <li>
 <p><code>max_delay</code> seconds before interruption occurs and replanning happens</p>
